# GeniusComPlayerToKareoke

./: README.md
.github/: copilot-instructions.md
qt-genius-lyrics/: README.md  pyproject.toml  requirements.txt
qt-genius-lyrics/src/app/: cache.py  genius_client.py  gui.py  lyrics.py  main_window.py  models.py  player.py  sync.py
qt-genius-lyrics/src/resources/: qrc_resources.py
qt-genius-lyrics/src/ui/: main_window.ui
qt-genius-lyrics/tests/: test_cache.py  test_genius_client.py  test_sync.py
