[tool.poetry]
name = "qt-genius-lyrics"
version = "0.1.0"
description = "A Qt application for searching songs and displaying lyrics with synchronized playback."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.4"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"